Arreglado la falta de acento en integracion continua

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul>
           <li>Doker </li>
           <li>Git</li>
-          <li>Integracion continua</li>
+          <li>Integración continua</li>
       </ul>
     
 </body>
