corrigiendo el nombre del curso de docker

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <ul>
-          <li>Doker </li>
+          <li>Doker :creando container sin dolor de cabeza</li>
           <li>Git</li>
           <li>Integración continua</li>
       </ul>
