--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul>
           <li>Doker :creando container sin dolor de cabeza</li>
           <li>Git</li>
-          <li>Integración continua</li>
+          <li>Integración continua curso bastante largo</li>
       </ul>
     
 </body>
