Completando en curso de got

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
       <ul>
           <li>Doker :creando container sin dolor de cabeza</li>
-          <li>Git</li>
+          <li>Git repositorios remotos para hacer un portafolio</li>
           <li>Integración continua curso bastante largo</li>
       </ul>
     
